--- a/README
+++ b/README
@@ -1,6 +1,6 @@
 Welcome to Bubbenstein/SDL (aka BSDL)!
 
-The history of this game engine is long and complex. To put it simply, BSDL is a project that was started August 1st, 2011 as a fork of a much older project that was started sometime in late 2010... and as of this writing, I haven't really touched the code in a whole year, so hold onto your hat if you decide to go digging. :)
+The history of this game engine is long and complex. To put it simply, BSDL is a project that was started August 1st, 2010 as a fork of a much older project that was started sometime in early 2010... and as of this writing, I haven't really touched the code in a whole year, so hold onto your hat if you decide to go digging. :)
 
 ----- FEATURES -----
 
@@ -53,7 +53,7 @@ The resources used by this game engine (namely, the image files) were either des
 
 I encourage other programmers to dig into the source code supplied with the engine. I am happy to help any aspiring programmers out there to get a feel for how engines like this tick.
 
-BSDL makes use of the SPriG library by John Dearborn.
+BSDL makes use of the SDL library and the supplementary SPriG library by John Dearborn.
 
 Sheridan Kane Rathbun
 2013/03/26
