--- a/README
+++ b/README
@@ -1,7 +1,5 @@
 Welcome to Bubbenstein/SDL (aka BSDL)!
 
-The history of this game engine is long and complex. To put it simply, BSDL is a project that was started August 1st, 2011 as a fork of a much older project that was started sometime in late 2010... and as of this writing, I haven't really touched the code in a whole year, so hold onto your hat if you decide to go digging. :)
-
 ----- FEATURES -----
 
 1) Support for multiple platforms, including Windows and Linux (it's probably possible to compile the engine for MacOS X too without any modification, but I cannot test this)
@@ -37,6 +35,7 @@ Mouse			-	Look up, down, left, and right
 Mouse Button 0		-	Attack
 F6				-	Throw a screenshot to the "shots" folder
 N				-	Activates "noclip" as long as the key is pressed
+P				-	Suspends the camera as long as the key is pressed
 I				-	Spawn an actor
 
 ----- CONTACT -----
@@ -44,16 +43,3 @@ I				-	Spawn an actor
 All suggestions, comments, and questions should be sent to: sheridan.rathbun@gmail.com
 
 No matter who you are, I would very much like to hear from you. :)
-
------ LEGALESE -----
-
-As someone who has downloaded this program, you are free to run, modify, and distribute it as you please. The only stipulation is that you charge no money for its redistribution or claim original authorship of it.
-
-The resources used by this game engine (namely, the image files) were either designed by me or collected from a variety of free libraries. The actor files come from the Freedoom project.
-
-I encourage other programmers to dig into the source code supplied with the engine. I am happy to help any aspiring programmers out there to get a feel for how engines like this tick.
-
-BSDL makes use of the SPriG library by John Dearborn.
-
-Sheridan Kane Rathbun
-2013/03/26
