--- a/README
+++ b/README
@@ -37,6 +37,8 @@ F6				-	Throw a screenshot to the "shots" folder
 N				-	Activates "noclip" as long as the key is pressed
 P				-	Suspends the camera as long as the key is pressed
 I				-	Spawn an actor
+K				-	Report the player's position
+G				-	Genocide troopers
 
 ----- CONTACT -----
 
