--- a/README
+++ b/README
@@ -43,6 +43,7 @@ K				-	Report the player's position
 G				-	Genocide troopers
 0-9				-	Select weapon
 B				-	Test sound effect
+M				-	Toggle music
 
 ----- CONTACT -----
 
